--- a/libetk/SConscript
+++ b/libetk/SConscript
@@ -39,6 +39,11 @@ env.Library('etk', [
     'etk_menu.c',
     'etk_menu_item.c',
     'etk_image_bmp_decoder.c',
+    'etk_source_timer.c',
+    'etk_source.c',
+    'etk_sources_manager.c',
+    'etk_check_button.c',
+    'etk_group_box.c',
     '../libjpeg/libjpeg.a',
     '../libgui/libgui.a',
     '../../libs/libc/libc.a',
