--- a/gui/SConscript
+++ b/gui/SConscript
@@ -15,6 +15,8 @@ env.Program('gui.elf', [
     '../libgui/libgui.a',
     '../libgui/libimage.a',
     '../libjpeg/libjpeg.a',
+    '../libpng/libpng.a',
+    '../libzlib/libzlib.a',
     '../../libs/libc/libc.a',
     '../../libs/libalgorithm/libalgorithm.a',
 
