--- a/test/SConscript
+++ b/test/SConscript
@@ -18,7 +18,7 @@ env = env.Clone(
   )
 
 env.Program('test.elf', [
-    'hello.c',
+    'test.c',
     '../../libs/libc/libc.a',
     '../../libs/libalgorithm/libalgorithm.a',
     ],
