--- a/etk/SConscript
+++ b/etk/SConscript
@@ -14,6 +14,10 @@ env.Program('etk.elf', [
     'sinclock.c',
     'mine.c',
     'terminal.c',
+    'light.c',
+    'power.c',
+    'temhum.c',
+    'status.c',
     '../libetk/libetk.a',
     '../libjpeg/libjpeg.a',
     '../libgui/libgui.a',
