--- a/liblvgl/SConscript
+++ b/liblvgl/SConscript
@@ -8,112 +8,25 @@ import os
 
 Import('env')
 
-
-env.Library('lvgl', [
+sources=[
     'port/lv_port_disp.c',
     # "port/lv_port_fs.c',",
     'port/lv_port_indev.c',
-    'src/core/lv_disp.c',
-    'src/core/lv_event.c',
-    'src/core/lv_group.c',
-    'src/core/lv_indev.c',
-    'src/core/lv_indev_scroll.c',
-    'src/core/lv_obj.c',
-    'src/core/lv_obj_class.c',
-    'src/core/lv_obj_draw.c',
-    'src/core/lv_obj_pos.c',
-    'src/core/lv_obj_scroll.c',
-    'src/core/lv_obj_style.c',
-    'src/core/lv_obj_tree.c',
-    'src/core/lv_refr.c',
-    'src/core/lv_theme.c',
-    'src/draw/lv_draw_arc.c',
-    'src/draw/lv_draw_blend.c',
-    'src/draw/lv_draw_img.c',
-    'src/draw/lv_draw_label.c',
-    'src/draw/lv_draw_line.c',
-    'src/draw/lv_draw_mask.c',
-    'src/draw/lv_draw_rect.c',
-    'src/draw/lv_draw_triangle.c',
-    'src/draw/lv_img_buf.c',
-    'src/draw/lv_img_cache.c',
-    'src/draw/lv_img_decoder.c',
-    'src/extra/lv_extra.c',
-    'src/font/lv_font.c',
-    'src/font/lv_font_dejavu_16_persian_hebrew.c',
-    'src/font/lv_font_fmt_txt.c',
-    'src/font/lv_font_loader.c',
-    'src/font/lv_font_montserrat_10.c',
-    'src/font/lv_font_montserrat_12.c',
-    'src/font/lv_font_montserrat_12_subpx.c',
-    'src/font/lv_font_montserrat_14.c',
-    'src/font/lv_font_montserrat_16.c',
-    'src/font/lv_font_montserrat_18.c',
-    'src/font/lv_font_montserrat_20.c',
-    'src/font/lv_font_montserrat_22.c',
-    'src/font/lv_font_montserrat_24.c',
-    'src/font/lv_font_montserrat_26.c',
-    'src/font/lv_font_montserrat_28.c',
-    'src/font/lv_font_montserrat_28_compressed.c',
-    'src/font/lv_font_montserrat_30.c',
-    'src/font/lv_font_montserrat_32.c',
-    'src/font/lv_font_montserrat_34.c',
-    'src/font/lv_font_montserrat_36.c',
-    'src/font/lv_font_montserrat_38.c',
-    'src/font/lv_font_montserrat_40.c',
-    'src/font/lv_font_montserrat_42.c',
-    'src/font/lv_font_montserrat_44.c',
-    'src/font/lv_font_montserrat_46.c',
-    'src/font/lv_font_montserrat_48.c',
-    'src/font/lv_font_montserrat_8.c',
-    'src/font/lv_font_simsun_16_cjk.c',
-    'src/font/lv_font_unscii_16.c',
-    'src/font/lv_font_unscii_8.c',
-    'src/gpu/lv_gpu_nxp_pxp.c',
-    'src/gpu/lv_gpu_nxp_pxp_osa.c',
-    'src/gpu/lv_gpu_nxp_vglite.c',
-    'src/gpu/lv_gpu_stm32_dma2d.c',
-    'src/hal/lv_hal_disp.c',
-    'src/hal/lv_hal_indev.c',
-    'src/hal/lv_hal_tick.c',
-    'src/misc/lv_anim.c',
-    'src/misc/lv_area.c',
-    'src/misc/lv_async.c',
-    'src/misc/lv_bidi.c',
-    'src/misc/lv_color.c',
-    'src/misc/lv_fs.c',
-    'src/misc/lv_gc.c',
-    'src/misc/lv_ll.c',
-    'src/misc/lv_log.c',
-    'src/misc/lv_math.c',
-    'src/misc/lv_mem.c',
-    'src/misc/lv_printf.c',
-    'src/misc/lv_style.c',
-    'src/misc/lv_templ.c',
-    'src/misc/lv_timer.c',
-    'src/misc/lv_tlsf.c',
-    'src/misc/lv_txt.c',
-    'src/misc/lv_txt_ap.c',
-    'src/misc/lv_utils.c',
-    'src/widgets/lv_arc.c',
-    'src/widgets/lv_bar.c',
-    'src/widgets/lv_btn.c',
-    'src/widgets/lv_btnmatrix.c',
-    'src/widgets/lv_canvas.c',
-    'src/widgets/lv_checkbox.c',
-    'src/widgets/lv_dropdown.c',
-    'src/widgets/lv_img.c',
-    'src/widgets/lv_label.c',
-    'src/widgets/lv_line.c',
-    'src/widgets/lv_objx_templ.c',
-    'src/widgets/lv_roller.c',
-    'src/widgets/lv_slider.c',
-    'src/widgets/lv_switch.c',
-    'src/widgets/lv_table.c',
-    'src/widgets/lv_textarea.c',
+]
+sources+= Glob('src/core/*.c')
+sources+= Glob('src/draw/*.c')
+sources+= Glob('src/font/*.c')
+sources+= Glob('src/gpu/*.c')
+sources+= Glob('src/hal/*.c')
+sources+= Glob('src/misc/*.c')
+sources+= Glob('src/widgets/*.c')
+sources+= Glob('src/extra/*.c')
+sources+= Glob('src/extra/**/*.c')
+sources+= Glob('src/extra/**/**/*.c')
 
+env.Library('lvgl', sources+[
     '../libjpeg/libjpeg.a',
     '../libgui/libgui.a',
     '../../libs/libc/libc.a',
     ],
-    CFLAGS='$CFLAGS -Ilibs/include/c/ -Iapp/libgui/ -Iapp/libjpeg/',)
+    CFLAGS='$CFLAGS -DLV_CONF_INCLUDE_SIMPLE  -Iapp/liblvgl/ -Ilibs/include/c/ -Iapp/libgui/ -Iapp/libjpeg/',)
