--- a/hello/SConscript
+++ b/hello/SConscript
@@ -25,11 +25,17 @@ env = env.Clone(
   PATH= [os.environ['PATH'],'/opt/local/bin' ],
   )
 
-env.Program('hello.elf', [
+
+source=[
     'hello.c',
     '../../libs/libc/libc.a',
     '../../libs/libalgorithm/libalgorithm.a',
-    ],
+    ]
+
+if env.get('MYLIB'):
+    source.append(env.get('MYLIB'))
+
+env.Program('hello.elf', source,
     CFLAGS='$CFLAGS -Ilibs/include/c/ ',
     LINKFLAGS= '$LINKFLAGS --entry main -Tuser.ld')
 
