--- a/microui/SConscript
+++ b/microui/SConscript
@@ -14,13 +14,19 @@ env = env.Clone(
   PATH= [os.environ['PATH'],'/opt/local/bin' ],
   )
 
-env.Program('microui.elf', [
+source= [
     'main.c',
     'microui.c',
     'renderer.c',
     '../libgui/libgui.a',
     '../../libs/libc/libc.a',
-    ],
+    ]
+
+if env.get('MYLIB'):
+    source.append(env.get('MYLIB'))
+
+
+env.Program('microui.elf',source,
     CFLAGS='$CFLAGS -Ilibs/include/c/ -Iapp/libgui/',
     LINKFLAGS= '$LINKFLAGS --entry main -Tuser.ld')
 
