--- a/test/SConscript
+++ b/test/SConscript
@@ -15,11 +15,17 @@ env = env.Clone(
   PATH= [os.environ['PATH'],'/opt/local/bin' ],
   )
 
-env.Program('test.elf', [
+
+source= [
     'test.c',
     '../../libs/libc/libc.a',
     '../../libs/libalgorithm/libalgorithm.a',
-    ],
+    ]
+
+if env.get('MYLIB'):
+    source.append(env.get('MYLIB'))
+
+env.Program('test.elf', source,
     CFLAGS='$CFLAGS -Ilibs/include/c/ ',
     LINKFLAGS= '$LINKFLAGS --entry main -Tuser.ld')
 
