--- a/bin/SConscript
+++ b/bin/SConscript
@@ -26,5 +26,5 @@ if env.get('MYLIB'):
 
 env.Program('ls', source,
     CFLAGS='$CFLAGS -Ilibs/include/c/ ',
-    LINKFLAGS= '$LINKFLAGS --entry main -Tuser.ld')
+    LINKFLAGS= '$LINKFLAGS $USER')
 
