--- a/libjpeg/SConscript
+++ b/libjpeg/SConscript
@@ -48,4 +48,4 @@ env.Library('jpeg', [
 #     '../../libs/libc/libc.a',
 #     ],
 #     CFLAGS='$CFLAGS -Ilibs/include/c/ ',
-#     LINKFLAGS= '$LINKFLAGS --entry main -Tuser.ld')
+#     LINKFLAGS= '$LINKFLAGS $USER')
