--- a/libzlib/SConscript
+++ b/libzlib/SConscript
@@ -34,4 +34,4 @@ env.Library('zlib', [
 #     '../../libs/libc/libc.a',
 #     ],
 #     CFLAGS='$CFLAGS -Ilibs/include/c/ ',
-#     LINKFLAGS= '$LINKFLAGS --entry main -Tuser.ld')
+#     LINKFLAGS= '$LINKFLAGS $USER')
