--- a/test/SConscript
+++ b/test/SConscript
@@ -27,5 +27,5 @@ if env.get('MYLIB'):
 
 env.Program('test.elf', source,
     CFLAGS='$CFLAGS -Ilibs/include/c/ ',
-    LINKFLAGS= '$LINKFLAGS --entry main -Tuser.ld')
+    LINKFLAGS= '$LINKFLAGS $USER')
 
