--- a/liblua/SConscript
+++ b/liblua/SConscript
@@ -12,6 +12,10 @@ Import('env')
 source=[]
 source+= Glob('src/*.c')
 
+
+if env.get('MYLIB'):
+    source.append(env.get('MYLIB'))
+
 env.Library('lua', source+[
     # '../libmusl/lib/libm.a',
     # '/opt/local/lib/gcc/arm-none-eabi/9.2.0/libgcc.a'
