fix make args too long

--- a/libmusl/Makefile
+++ b/libmusl/Makefile
@@ -42,7 +42,7 @@ LDFLAGS =
 LDFLAGS_AUTO =
 LIBCC = -lgcc
 CPPFLAGS =
-CFLAGS =
+CFLAGS = --specs=nosys.specs
 CFLAGS_AUTO = -Os -pipe
 CFLAGS_C99FSE = -std=c99 -ffreestanding -nostdinc 
 
@@ -160,17 +160,17 @@ obj/%.lo: $(srcdir)/%.c $(GENH) $(IMPH)
 
 lib/libc.so: $(LOBJS) $(LDSO_OBJS)
 	@echo $^ >temp2.txt
-	$(CC) $(CFLAGS_ALL) $(LDFLAGS_ALL) -nostdlib -shared \
-	-Wl,-e,_dlstart -o $@ <temp2.txt $(LIBCC)
+	cat temp2.txt |$(CC) $(CFLAGS_ALL) $(LDFLAGS_ALL) -nostdlib -shared \
+	-Wl,-e,_dlstart -o $@  $(LIBCC)
 	#$(CC) $(CFLAGS_ALL) $(LDFLAGS_ALL) -nostdlib -shared \
 	#-Wl,-e,_dlstart -o $@ $(LOBJS) $(LDSO_OBJS) $(LIBCC)
 
 lib/libc.a: $(AOBJS)
 	rm -f $@
 	@echo $^ >temp.txt
-	$(AR) rc $@ <temp.txt
-	$(RANLIB) $@  <temp.txt
-	# $(AR) rc $@ $(AOBJS)
+	cat temp.txt | xargs $(AR) rc $@
+	cat temp.text |xargs $(RANLIB) $@
+	#$(AR) rc $@ $(AOBJS)
 	#$(RANLIB) $@
 
 $(EMPTY_LIBS):
