--- a/libchez/SConscript
+++ b/libchez/SConscript
@@ -24,7 +24,6 @@ source+= ['c/statics.c',
          'c/symbol.c', 
          'c/intern.c', 
          'c/gcwrapper.c', 
-
         'c/number.c',
          'c/schsig.c', 
          'c/io.c',
@@ -40,10 +39,12 @@ source+= ['c/statics.c',
         'c/thread.c',
         # 'c/expeditor.c',
         'c/scheme.c', 
-        # 'c/gc.c',
-        # 'c/gc-ocd.c', 
-        # 'c/gc-oce.c',
+        'c/gc.c',
+        'c/gc-ocd.c', 
+        'c/gc-oce.c',
+        'c/gc-011.c', 
         'c/arm32le.c',
+        'c/compress-io.c'
 ]
 source+= Glob(type+'/*.h')
 
