--- a/file/SConscript
+++ b/file/SConscript
@@ -18,7 +18,7 @@ if env.get('MYLIB'):
     source.append(env.get('MYLIB'))
 
 
-env.Program('file.elf', source,
+env.Program('file', source,
     CFLAGS='$CFLAGS $LIBCFLAGS ',
     LINKFLAGS= '$LINKFLAGS $USER')
 
