--- a/libgui/SConscript
+++ b/libgui/SConscript
@@ -21,5 +21,5 @@ env.Library('image', [
     '../libpng/libpng.a',
 ]+env['LIBC'],CFLAGS='$CFLAGS $LIBCFLAGS -Iapp/libjpeg -Iapp/libpng')
 
-# env.Objcopy('gui.elf','gui',OBJCOPYFLAGS='-S --strip-all')
-#env.Objcopy('gui.dbg','gui.elf',OBJCOPYFLAGS='--only-keep-debug')
+# env.Objcopy('gui','gui',OBJCOPYFLAGS='-S --strip-all')
+#env.Objcopy('gui.dbg','gui',OBJCOPYFLAGS='--only-keep-debug')
