--- a/scheme/SConscript
+++ b/scheme/SConscript
@@ -28,7 +28,7 @@ if env['ARCHTYPE']=='arm':
     type='arm32le'
     cflags ='-DINLINES -DGC_MACROS -DARMV6 -DMB_LEN_MAX=8 -D_LARGEFILE64_SOURCE -DHAVE_HIDDEN'
 else:
-    print('not support')
+    print('scheme not support ',env['ARCHTYPE'])
 
 env.Program('scheme', source,
     CFLAGS='$CFLAGS $LIBCFLAGS -Iapp/libchez/'+type+' -I. '+cflags,
