--- a/cmd/SConscript
+++ b/cmd/SConscript
@@ -37,3 +37,16 @@ if env.get('MYLIB'):
 env.Program('echo', source,
     CFLAGS='$CFLAGS $LIBCFLAGS ',
     LINKFLAGS= '$LINKFLAGS $USER')
+
+
+
+source=[
+    'cat.c',
+    ]+env['LIBC']
+
+if env.get('MYLIB'):
+    source.append(env.get('MYLIB'))
+
+env.Program('cat', source,
+    CFLAGS='$CFLAGS $LIBCFLAGS ',
+    LINKFLAGS= '$LINKFLAGS $USER')
